--- a/yoga_apps.html
+++ b/yoga_apps.html
@@ -26,7 +26,7 @@
             <p>So now, I am looking into the open-source community for help in learning and coding. I plan to build these tools to be available for everyone, thereby contributing to the community. I will also create content directed towards people who are mainly involved with coding. Perhaps a 15-minute yoga break could loosen up the body? Maybe a guided breathing practice to empty and re-organize the mind? How about an app that is synced with meditative music as your daily breathing app? That's why I'm here.</p>
 
             <h2>Future Plans</h2>
-            <p>I have a simple solution that works. The code isn't complex, or at least the functions of the app aren't. The question is, where and how can I learn? Other "in progress" apps will be linked here soon. As my skills progress and as I possibly receive help from the community, Many new apps to be found here soon. </p>
+            <p>I have a simple solution that works. The code isn't complex, or at least the functions of the app aren't. The question is, where and how can I learn? Other "in progress" apps will be linked here soon. As my skills progress and as I possibly receive help from the community, many new and interesting ideas will see the light of day... sooner rather than later. </p>
 
             <p><a href="YOGAFUNC_BPM_Tap_final.html">Check out the BPM Tap here</a></p>
         </section>
