--- a/yoga_apps.html
+++ b/yoga_apps.html
@@ -5,14 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Yoga Apps section of Outside The Box - Yoga</h1>
-    </header>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="yoga_apps.html">Yoga Apps</a>
-        <!-- Add more links as needed -->
-    </div>
+    <div id="header"></div>
+
     
     <main>
         <section>
@@ -34,5 +28,7 @@
     <footer>
         <p>© 2023 Outside The Box - Yoga</p>
     </footer>
+    <script src="loadHeader.js"></script>
+
 </body>
 </html>
