--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to YOGAFUNC</h1>
-    </header>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="yoga_apps.html">Yoga Apps</a>
-        <!-- Add more links as needed -->
-    </div>
+    <div id="header"></div>
+
+
     <main>
+   
         <section>
             <h2>Hello world!</h2>
             <p>
@@ -82,6 +78,6 @@
         <!-- Footer content goes here -->
         <p>© 2023 YOGAFUNC</p>
     </footer>
-    </body>
+    <script src="loadHeader.js"></script>
 </body>
 </html>
