--- a/backstage.html
+++ b/backstage.html
@@ -11,7 +11,7 @@
         <!-- header will be loaded here -->
         <div id="header"></div>
 
-        Here are post updates about my project.
+        <div>Here are post updates about my project.</div>
         <div>
     
             <div id="feed"></div>
