--- a/backstage.html
+++ b/backstage.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <section><div id="header"></div></section>
         <!-- header will be loaded here -->
-        <div id="header"></div>
+        
 
         <div>Here are post updates about my project.</div>
         <div>
