--- a/backstage.html
+++ b/backstage.html
@@ -8,12 +8,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <section><div id="header"></div></section>
+        <div id="header"></div>
         <!-- header will be loaded here -->
         
-
-        <div>Here are post updates about my project.</div>
-        <div>
     
             <div id="feed"></div>
         </div>
