--- a/yogafunc_music_search.html
+++ b/yogafunc_music_search.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>YOGAFUNC Music Search</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
     <style>
         body {
@@ -57,6 +58,8 @@
         }
     </style>
 <body>
+    <div id="header"></div>
+
     <h1>YOGAFUNC Music Search</h1>
     <div id="version"></div>
     <input type="text" id="searchInput" placeholder="Search...">
