--- a/yogafunc_music_search3.html
+++ b/yogafunc_music_search3.html
@@ -89,7 +89,7 @@
     <script>
         var data = [];
     
-        Papa.parse("https://raw.githubusercontent.com/OTByoga/YOGAFUNC_Music/main/Copy%20of%20YF_music_data_2023_06_11_final%20-%20combined_no_duplicates.csv", {
+        Papa.parse("https://raw.githubusercontent.com/OTByoga/YOGAFUNC_Music/main/YF_music_data_2023_06_11_1711.csv", {
             download: true,
             header: true,
             complete: function(results) {
