--- a/YOGAFUNC_BPM_App.html
+++ b/YOGAFUNC_BPM_App.html
@@ -28,8 +28,10 @@
 
     #suggestion {
     text-align: center;
-    height: 100px;
+    height: 105px;
     overflow: auto;
+    user-select: none; /* prevents text selection */
+
 }
 
 
