--- a/YOGAFUNC_BPM_App.html
+++ b/YOGAFUNC_BPM_App.html
@@ -153,19 +153,19 @@
     <p id="suggestion"></p>
   
     <div class="photo-container">
-      <img class="photo" src="images/photo-0.jpg" alt="Photo 0">
+      <img class="photo" src="images/photo-0.png" alt="Photo 0">
     </div>
     <div class="photo-container">
-      <img class="photo" src="images/photo-1.jpg" alt="Photo 1">
+      <img class="photo" src="images/photo-1.png" alt="Photo 1">
     </div>
     <div class="photo-container">
-      <img class="photo" src="images/photo-2.jpg" alt="Photo 2">
+      <img class="photo" src="images/photo-2.png" alt="Photo 2">
     </div>
     <div class="photo-container">
-      <img class="photo" src="images/photo-3.jpg" alt="Photo 3">
+      <img class="photo" src="images/photo-3.png" alt="Photo 3">
     </div>
     <div class="photo-container">
-      <img class="photo" src="images/photo-4.jpg" alt="Photo 4">
+      <img class="photo" src="images/photo-4.png" alt="Photo 4">
     </div>
   
     <div class="logo-container">
