--- a/YOGAFUNC_BPM_App.html
+++ b/YOGAFUNC_BPM_App.html
@@ -9,14 +9,15 @@
     body {
       font-family: "Gill Sans", sans-serif;
       text-align: center; /* Center align the content */
-    }
-
+      background-color: #000; /* Black */
+      color: #fff; /* White */
+} 
     h1 {
-      font-weight: bold;
+      font-weight: bolder;
     }
 
     p {
-      font-weight: normal;
+      font-weight: lighter;
     }
 
     #bpm-display {
@@ -34,34 +35,33 @@
 
 }
 
-
     /* Define the colors for each BPM range */
     .range-0 {
-      color: #808080; /* Gray */
+      color: #cdcccc; /* Gray */
     }
 
     .range-1 {
-      color: #4682B4; /* Steel Blue */
+      color: #61adec; /* Steel Blue */
     }
 
     .range-2 {
-      color: #FF8C00; /* Dark Orange */
+      color: #feaa43; /* Dark Orange */
     }
 
     .range-3 {
-      color: #DC143C; /* Crimson */
+      color: #ff466b; /* Crimson */
     }
 
     .range-4 {
-      color: #800080; /* Purple */
+      color: #ff07ff; /* Purple */
     }
 
     .range-5 {
-      color: #000000; /* Black */
+      color: #f2f2f2; /* Black */
     }
 
     .range-6 {
-      color: #008000; /* Green */
+      color: #05f005; /* Green */
     }
 
     .range-7 {
@@ -94,6 +94,17 @@
       margin: 20px auto;
       display: block; /* Initially show the logo container */
     }
+    .logo-container a {
+      color: #ddd; /* Light gray */
+    }
+
+    .logo-container a:hover {
+      color: #bbb; /* Darker gray when hovered */
+    }
+
+    .logo-container a:active {
+      color: #999; /* Even darker gray when clicked */
+    }
 
     .logo {
       max-width: 100%;
@@ -109,10 +120,10 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 500px;
-      height: 500px;
+      width: 800px;
+      height: 800px;
       border-radius: 50%;
-      background-color: rgba(255, 255, 255, 0.7);
+      background-color: rgba(6, 6, 6, 0.7);
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.2s ease-out, transform 0.2s ease-out;
@@ -131,16 +142,16 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-}
+    }
 
-.back-button:hover {
-  text-decoration: underline;
-}
+    .back-button:hover {
+      text-decoration: underline;
+    }
 
-.back-button:before {
-  content: "\2190";
-  margin-right: 5px;
-}
+    .back-button:before {
+      content: "\2190";
+      margin-right: 5px;
+    }
 
   </style>
 </head>
@@ -169,7 +180,7 @@
     </div>
   
     <div class="logo-container">
-      <img class="logo" src="images/yogafunc-logo.png" alt="YOGAFUNC Logo">
+      <img class="logo" src="images/yogafunc-logo_white.png" alt="YOGAFUNC Logo">
       <p class="website-link">Visit us at <a href="https://www.otb.yoga">www.otb.yoga</a></p>
     </div>
   
