--- a/programming.html
+++ b/programming.html
@@ -21,6 +21,10 @@
             margin-bottom: 20px;
         }
 
+        p {
+            word-wrap: break-word; /* Add this line */
+        }
+
         @media (max-width: 600px) {
             body {
                 padding: 20px;
