--- a/programming.html
+++ b/programming.html
@@ -23,6 +23,8 @@
 
         p {
             word-wrap: break-word; /* Add this line */
+            overflow-wrap: break-word; /* Add this line */
+            text-align: center; /* Add this line */
         }
 
         @media (max-width: 600px) {
