--- a/programming.html
+++ b/programming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MP3 Looper</title>
+    <title>Program The Mind</title>
     <style>
         body {
             background-color: #282828;
@@ -53,7 +53,6 @@
         // Array of audio file URLs
         var audioFiles = [
             'https://raw.githubusercontent.com/OTByoga/web/main/audio/YogiOnTheBike_program.mp3',
-            'audio2.mp3',
             // Add more audio files as needed
         ];
 
