--- a/programming.html
+++ b/programming.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <p>This is me just trying out something. This will become an interactive meditation page where you can create your own affirmations and meditations with the help of "Chad" (GPT-4).</p>
+    <p>This is me just trying out something. <br>This will become an interactive meditation page where you can create your own affirmations <br> and meditations with the help of "Chad" (GPT-4).</p>
 
     <h1>Choose Your Program</h1>
     <select id="audioSelect">
