--- a/programming.html
+++ b/programming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Program The Mind</title>
+    <title>MP3 Looper</title>
     <style>
         body {
             background-color: #282828;
@@ -22,20 +22,19 @@
         }
 
         p {
-            word-wrap: break-word; /* Add this line */
-            overflow-wrap: break-word; /* Add this line */
-            text-align: center; /* Add this line */
+            word-wrap: break-word;
         }
 
         @media (max-width: 600px) {
             body {
                 padding: 20px;
+                font-size: 18px; /* Increase the font size on small screens */
             }
         }
     </style>
 </head>
 <body>
-    <p>This is me just trying out something. <br>This will become an interactive meditation page where you can create your own affirmations <br> and meditations with the help of "Chad" (GPT-4).</p>
+    <p>This is me just trying out something.<br>This will become an interactive meditation page where you can create your own affirmations and meditations with the help of "Chad" (GPT-4).</p>
 
     <h1>Choose Your Program</h1>
     <select id="audioSelect">
@@ -53,6 +52,7 @@
         // Array of audio file URLs
         var audioFiles = [
             'https://raw.githubusercontent.com/OTByoga/web/main/audio/YogiOnTheBike_program.mp3',
+            'audio2.mp3',
             // Add more audio files as needed
         ];
 
