--- a/programming.html
+++ b/programming.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <p>This is me just trying out something.<br>This will become an interactive meditation page where you can create your own affirmations and meditations with the help of "Chad" (GPT-4).</p>
+    <p>This is me just trying out something.<br>This will become an interactive meditation page where you can create your own affirmations and meditations <br> with the help of "Chad" (GPT-4).</p>
 
     <h1>Choose Your Program</h1>
     <select id="audioSelect">
@@ -52,7 +52,6 @@
         // Array of audio file URLs
         var audioFiles = [
             'https://raw.githubusercontent.com/OTByoga/web/main/audio/YogiOnTheBike_program.mp3',
-            'audio2.mp3',
             // Add more audio files as needed
         ];
 
