--- a/programming.html
+++ b/programming.html
@@ -88,6 +88,11 @@
                 }
             };
         }
+        setInterval(function() {
+    /* This will "click" the body of the page every 5 minutes (100000 milliseconds) */
+    document.body.click();
+}, 300000);
+
     </script>
 </body>
 </html>
