--- a/programming.html
+++ b/programming.html
@@ -23,6 +23,7 @@
 
         p {
             word-wrap: break-word;
+            text-align: center; /* Add this line */
         }
 
         @media (max-width: 600px) {
@@ -88,10 +89,11 @@
                 }
             };
         }
+
         setInterval(function() {
-    /* This will "click" the body of the page every 5 minutes (100000 milliseconds) */
+    /* This will "click" the body of the page every 5 minutes (300000 milliseconds) */
     document.body.click();
-}, 300000);
+}, 100000);
 
     </script>
 </body>
