--- a/programming.html
+++ b/programming.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MP3 Looper</title>
+    <title>Re-program Your Mind</title>
     <style>
         body {
             background-color: #282828;
